--- a/user/templates/user/password_reset_complete.html
+++ b/user/templates/user/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends "core/base.html" %}
+{% extends "user/auth_base.html" %}
 {% block content %}
 
 <main class="responsive-padding flex flex-col items-center mt-9">
