--- a/adminv2/templates/adminv2/blog/index.html
+++ b/adminv2/templates/adminv2/blog/index.html
@@ -1,12 +1,12 @@
 {% extends 'adminv2/base.html'%}
 {% load static %}
 
-{% block title %}Blog | Control Panel | Eaglespoint{% endblock %}
+{% block title %}Blog | {{ block.super }} {% endblock %}
 
 {% block section_title %} Blog Articles {% endblock %}
 {% block section_caption%} Manage and publish news, updates, or articles. {% endblock %}
 
-{% block content %}
+{% block admin_content %}
 
 <div class="flex flex-col gap-7 mt-7">
 
