--- a/adminv2/templates/adminv2/messaging/index.html
+++ b/adminv2/templates/adminv2/messaging/index.html
@@ -1,12 +1,12 @@
 {% extends 'adminv2/base.html'%}
 {% load static %}
 
-{% block title %}{% endblock %}
+{% block title %} Inbox {{ block.super }} {% endblock %}
 
 {% block section_title %} Inbox {% endblock %}
 {% block section_caption%} View and respond to messages submitted through the contact form. {% endblock %}
 
-{% block content %} 
+{% block admin_content %} 
 
     <div>
         <form class="max-w-md mx-auto mb-6 mt-6" onsubmit="handleSearch(event)">
