--- a/components/headerFooter/minimal-footer.html
+++ b/components/headerFooter/minimal-footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="bg-slate-100 py-6 px-4 text-center">
+<footer class="bg-slate-100 py-6 px-4 text-center mt-6">
     <p class="text-gray-700 text-sm">
         &copy; <span x-data x-text="new Date().getFullYear()">2025</span> 
         Eaglespoint Horizon Limited. All rights reserved.
