--- a/components/headerFooter/minimal-header.html
+++ b/components/headerFooter/minimal-header.html
@@ -1,8 +1,8 @@
 {% load static %}
-<div class="w-full bg-white border-gray-200 py-4 sticky top-0 z-30 drop-shadow-md">
+<header class="responsive-padding w-full bg-white border-gray-200 pt-4 sticky top-0 z-30">
     <div class="flex items-center justify-center">
-        <a href="{% url 'core:home' %}">
-            <img src="{% static 'images/eaglespoint-logo.png' %}" width="48" class="h-12" alt="EaglesPoint Logo" />
+        <a class="block" href="{% url 'core:home' %}">
+            <img src="{% static 'images/eaglespoint-logo.png' %}" width="48" class="w-16" alt="EaglesPoint Logo" />
         </a>
     </div>
-</div>
+</header>
