--- a/user/templates/user/password_reset_confirm.html
+++ b/user/templates/user/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "core/base.html" %}
+{% extends "user/auth_base.html" %}
 {% block title %} Password Reset {% endblock title %}
 {% block content %}
 
