started frontend design of admin profile management

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -143,6 +143,7 @@
     {% comment %} <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script> {% endcomment %}
     <script src="{% static 'js/helper_func.js' %}"></script>
     <script src="{% static 'js/utils.js' %}"></script>
+    <script src="{% static 'js/fallbacks.js' %}"></script>
     <script>
         AOS.init({
             disable: function () {
