implement block/unblock user on frontend

--- a/adminv2/templates/adminv2/users/user-info.html
+++ b/adminv2/templates/adminv2/users/user-info.html
@@ -10,28 +10,50 @@
             <div class="flex flex-col sm:flex-row gap-4 sm:gap-6 items-start sm:items-center"> 
                 <div class="profile-photo">
                     <div class="w-16 h-16 sm:w-20 sm:h-20 md:w-24 md:h-24 rounded-full overflow-hidden border-2 border-blue-100">
-                        <img src="https://img.daisyui.com/images/profile/demo/yellingcat@192.webp" class="w-full h-full object-cover" />
+                        {% if user.profileImage %}
+                            <img src="{{user.profileImage.url}}" alt="{{user.firstname}} profle image" class="w-full h-full object-cover" />
+                        {% else %}
+                            <img src="{% static 'images/default-user.svg' %}" alt="default-profile-image" class="w-full h-full object-cover" />
+                        {% endif %}
                     </div>
                 </div>
 
                 <div class="flex-1 w-full min-w-0">
                     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2 sm:gap-4">
                         <div class="min-w-0">
-                            <h1 class="text-2xl font-bold text-gray-800 truncate">Olamide Ayomide</h1>
+                            <h1 class="text-2xl font-bold text-gray-800 truncate">{{ user.first_name }} {{ user.last_name }}</h1>
                             <div class="flex items-center gap-2 mt-1 flex-wrap">
-                                <span class="bg-green-100 text-green-700 px-2 py-1 rounded-md text-xs font-medium whitespace-nowrap">Active</span>
-                                <span class="text-gray-600 text-sm whitespace-nowrap">Regular User</span>
+                                {% if user.is_active == True %}
+                                    <span class="bg-green-100 text-green-700 px-2 py-1 rounded-md text-xs font-medium whitespace-nowrap">Active</span>
+                                {% else %}
+                                    <span class="bg-red-100 text-red-600 px-2 py-1 rounded-md text-xs font-medium whitespace-nowrap">Inactive</span>
+                                {% endif %}
+                                <span class="text-gray-600 text-sm whitespace-nowrap">{{ user.get_user_role_display }}</span>
                             </div>
                         </div>
                         
                         <div class="flex gap-2 items-center flex-wrap">
-                            <button class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1.5 sm:px-4 sm:py-2 rounded-md text-sm font-medium transition-colors whitespace-nowrap cursor-pointer">
-                                Message User
-                            </button>
                             <button class="hidden sm:block border border-gray-300 hover:bg-gray-50 text-gray-700 px-3 py-1.5 sm:px-4 sm:py-2 rounded-md text-sm font-medium transition-colors whitespace-nowrap cursor-pointer">
                                 Reset Password
                             </button>
+                            <button class="border  px-3 py-1.5 sm:px-4 sm:py-2 rounded-md text-sm font-medium transition-colors whitespace-nowrap cursor-pointer flex items-center gap-2" 
+                            :class="blockStatus ? 'success-btn' : 'danger-btn'"
+                            onclick="toggleBlock({{ user.id }}, event)"
+                                x-data="{
+                                    blockStatus: {% if user.is_block %}true{% else %}false{% endif %},
+                                    loading: false,
+                                }"
+                                >
+                                <template x-if="loading">
+                                    <svg class="animate-spin h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                                    </svg>
+                                </template>
+                                <span x-text="blockStatus ? 'Unblock User':'Block User'"></span>
+                            </button>
                             
+
                             <div class="relative">
                                 <button class="w-8 h-8 sm:w-9 sm:h-9 flex items-center justify-center rounded-full hover:bg-gray-100 transition-colors cursor-pointer" 
                                         popovertarget="more-actions-menu" 
@@ -47,7 +69,9 @@
                                     style="position-anchor:--more-actions-anchor; 
                                         inset: anchor(bottom);
                                         margin-top: 0.5rem;">
-                                    <li><a class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 whitespace-nowrap">View Profile</a></li>
+                                    {% if user.user_role == 'admin' or user.user_role == 'customer' %}
+                                    <li><a class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 whitespace-nowrap">Upgrade to Admin</a></li>
+                                    {% endif %}
                                     <li><a class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 whitespace-nowrap">Edit User</a></li>
                                     <li><a class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 whitespace-nowrap">Account Settings</a></li>
                                     <li class="border-t border-gray-200 mt-1"></li>
@@ -108,15 +132,15 @@
                         <div class="space-y-3 sm:space-y-4">
                             <div class="break-words">
                                 <p class="text-sm text-gray-500">Full Name</p>
-                                <p class="text-gray-900 sm:text-base">Olamide Ayomide</p>
+                                <p class="text-gray-900 sm:text-base">{{ user.first_name }} {{ user.last_name }}</p>
                             </div>
                             <div class="break-words">
                                 <p class="text-sm text-gray-500">Email</p>
-                                <p class="text-gray-900 sm:text-base">olamide@example.com</p>
+                                <p class="text-gray-900 sm:text-base"><a class="underline" href="mailto:{{user.email}}">{{ user.email }}</a></p>
                             </div>
                             <div class="break-words">
                                 <p class="text-sm text-gray-500">Phone</p>
-                                <p class="text-gray-900 sm:text-base">+1 (555) 123-4567</p>
+                                <p class="text-gray-900 sm:text-base"><a class="underline" href="tel:{{user.phone_number}}">{{ user.phone_number }}</a></p>
                             </div>
                         </div>
                     </div>
@@ -141,4 +165,42 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block script %}
+    
+    <script>
+        
+        function toggleBlock(user_id, event){
+            alpineComponent = Alpine.$data(event.target)
+            alpineComponent.loading = true
+            let url = "{% url 'adminv2:toggle-block-status' 123 %}".replace("123", user_id);
+
+            fetch(url, {
+                method: "POST",
+                headers: {
+                "X-Requested-With": "XMLHttpRequest",
+                "X-CSRFToken": getCsrfToken()
+                }
+            })
+            .then(response => response.json())
+            .then(data => {
+                if(data.status == 'success'){
+                    console.log(alpineComponent.blockStatus)
+                    alpineComponent.blockStatus = data.blockStatus 
+                    // showToastNotification('success', data.message);
+                }
+                else{
+                    showToastNotification('danger', data.message)
+                }
+            })
+            .catch(error => console.log("Error:", error))
+            .finally(() => {
+                alpineComponent.loading = false;
+            })
+        }
+
+
+    </script>
+
 {% endblock %}
